--- a/contactus.html
+++ b/contactus.html
@@ -78,6 +78,7 @@
       justify-content: center;
       gap: 40px;
       margin-top: 20px;
+      flex-wrap: wrap;
     }
     .contact-links a img {
       width: 70px;
@@ -123,8 +124,12 @@
 
     <div class="contact-links">
       <!-- WhatsApp -->
-      <a href="https://wa.me/2347036741165" target="_blank">
+      <a href="https://wa.me/2348012345678" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+      </a>
+      <!-- Phone -->
+      <a href="tel:+2348072831434">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Phone_font_awesome.svg" alt="Phone">
       </a>
       <!-- Email -->
       <a href="mailto:isakresources@gmail.com">
@@ -138,4 +143,3 @@
   </footer>
 </body>
 </html>
-
