--- a/contactus.html
+++ b/contactus.html
@@ -129,7 +129,7 @@
       </a>
       <!-- Phone -->
       <a href="tel:+2348072831434">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Phone_font_awesome.svg" alt="Phone">
+        <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Phone">
       </a>
       <!-- Email -->
       <a href="mailto:isakresources@gmail.com">
